# addict-tracking-changes

./: Pipfile  README.md  mkdocs.yml  pyproject.toml
docs/: README.md
src/addict/: addict.py
tests/: sample_test.py
